# msdpp

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: lint_and_format.yaml
data/: pixelprose_preprocess.py  pp_util.py  save_pp_spice.py
environments/: Dockerfile
examples/: README.md  grid_search_eval.py
examples/configs/: div.json  overall.json
notebooks/: msdpp_basic_usage.ipynb  msdpp_basic_usage.py
src/msdpp/: __init__.py  data.py  registry_class.py  task.py
src/msdpp/base/: __init__.py  divmethod.py  model.py
src/msdpp/common/: __init__.py  visualize.py
src/msdpp/div_method/: __init__.py  div_method_exceptions.py  dpp.py  sim_funcs.py
src/msdpp/evalindex/: eval_index.py
src/msdpp/models/: __init__.py  blip2.py
src/msdpp/schema/: __init__.py  common.py  evaluator.py  retrieval_dataset.py  retrieval_result.py  task.py
